--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "bs": "nightwatch --config ./config/nightwatch-bs.conf.js --test nightwatch/specs/**/*.test.ts --env browserstack.android",
-    "local": "nightwatch --config ./config/nightwatch-local.conf.js --test nightwatch/specs/**/*.test.ts  --env app.android.emulator",
+    "emu": "nightwatch --config ./config/nightwatch-local.conf.js --test nightwatch/specs/**/*.test.ts  --env app.android.emulator",
+    "local": "nightwatch --config ./config/nightwatch-local.conf.js --test nightwatch/specs/**/*.test.ts  --env app.android.real",
     "clean": "rm -rf tests_output logs",
     "prebs": "npm run clean",
     "prelocal": "npm run clean"
@@ -25,9 +26,9 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "@sant-testing/node-credential-manager": "^1.0.4",
     "@cx-testing/msauth-cli": "^0.1.0",
-    "@cx-testing/wdio-xray-cli": "^0.4.1"
+    "@cx-testing/wdio-xray-cli": "^0.4.1",
+    "@sant-testing/node-credential-manager": "^1.0.4",
+    "dotenv": "^16.4.5"
   }
 }
