--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bs": "nightwatch --config ./config/nightwatch-bs.conf.js --test nightwatch/specs/**/*.test.ts --env browserstack.android --reporter=nightwatch-ctrf-json-reporter",
-    "emu": "nightwatch --config ./config/nightwatch-local.conf.js --test nightwatch/specs/**/*.test.ts  --env app.android.emulator --reporter=nightwatch-ctrf-json-reporter",
-    "local": "nightwatch --config ./config/nightwatch-local.conf.js --test nightwatch/specs/**/*.test.ts  --env app.android.real --reporter=nightwatch-ctrf-json-reporter",
-    "clean": "rm -rf tests_output logs reports",
-    "prebs": "npm run clean",
-    "prelocal": "npm run clean",
+    "start": "nightwatch --workers=1 --reporter=nightwatch-ctrf-json-reporter",
+    "bs": "npm start -- --config ./config/nightwatch-bs.conf.js --env browserstack.android",
+    "emulator": "npm start -- --config ./config/nightwatch-local.conf.js --env app.android.emulator",
+    "local": "npm start -- --config ./config/nightwatch-local.conf.js --env app.android.real",
+    "clean": "rm -rf tests_output logs reports/*.json ctrf/*.json",
     "generate": "ts-node ./ctrf/converter.ts",
     "xray": "xray send -t CXF-13219 -e cx-acc -s \"($DEVICE_NAME) Daily mobile test execution %datetime%\"",
     "send": "npm run generate && npm run xray"
